force-app/main/default/objects/Activity/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>Fecha de cuando se ha creado la tarea</description>
    <label>Fecha de oferta</label>
    <type>Date</type>
</CustomField>