force-app/main/default/objects/Activity/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Descripción general</description>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>