force-app/main/default/objects/Activity/fields/Proyect__c.field-meta.xml
<CustomField>
    <fullName>Proyect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Proyecto implicado en la tarea</description>
    <label>Proyecto</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>